# verify-semanticly-done-prs

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: prlint.yml
