[tool.poetry]
name = "my-python-poetry-project"
version = "0.1.0"
description = "A Python project using Poetry"
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
# Add development dependencies here

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
